Improvements to the way sass files are built and combined. Added missing modules keyword replacement in the source sass files

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -27,8 +27,8 @@
         <!-- build:css({{dest}}) styles/ie.css -->
         <!-- import:sass source/styles/global.scss [<link rel="stylesheet" href="styles/ie/global.css" />] -->
         <!-- import:bowerCSS -->
-        <!-- import:sass source/styles/medium.scss [<link rel="stylesheet" href="styles/ie/medium.css" media="(min-width: <%= mediumMQ %>)" />] -->
-        <!-- import:sass source/styles/wide.scss [<link rel="stylesheet" href="styles/ie/wide.css" media="(min-width: <%= wideMQ %>)" />] -->
+        <!-- import:sass source/styles/medium.scss [<link rel="stylesheet" href="styles/ie/medium.css" />] -->
+        <!-- import:sass source/styles/wide.scss [<link rel="stylesheet" href="styles/ie/wide.css" />] -->
         <!-- endbuild -->
         <!-- import:sass source/styles/print.scss [<link rel="stylesheet" href="styles/ie/print.css" media="print" />] -->
         <![endif]-->
