Change bootstrap condition to bring in the bootstrap HTML file which will determine the jS files to include, easier to manage this in the module

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -82,20 +82,7 @@
     <!-- build:js js/plugins.min.js -->
     <!-- import:js source/js/plugins.js -->
     <!-- import:bowerJS --><% if (bootstrap) { %>
-    <!--
-        Bootstrap plugins. Remove any that aren't required to reduce the resulting file size.
-    -->
-    <!-- import:js module:bootstrap-sass/js/transition.js -->
-    <!-- import:js module:bootstrap-sass/js/alert.js -->
-    <!-- import:js module:bootstrap-sass/js/button.js -->
-    <!-- import:js module:bootstrap-sass/js/collapse.js -->
-    <!-- import:js module:bootstrap-sass/js/dropdown.js -->
-    <!-- import:js module:bootstrap-sass/js/modal.js -->
-    <!-- import:js module:bootstrap-sass/js/tooltip.js -->
-    <!-- import:js module:bootstrap-sass/js/popover.js -->
-    <!-- import:js module:bootstrap-sass/js/scrollspy.js -->
-    <!-- import:js module:bootstrap-sass/js/tab.js -->
-    <!-- import:js module:bootstrap-sass/js/affix.js -->
+    <!-- import:content module:squiz-module-bootstrap/html/index.html -->
     <% } %><!-- import:js module:**/js/plugin.js -->
     <!-- endbuild -->
 
