--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -67,6 +67,10 @@ body {
     line-height: 1.4;
 }
 
+img {
+    max-width: 100%;
+}
+
 // IE10 Metro responsive
 // Required for Windows 8 Metro split-screen snapping with IE10
 // Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
