--- a/app/templates/source/styles/imports/utilities.scss
+++ b/app/templates/source/styles/imports/utilities.scss
@@ -55,3 +55,26 @@
     @include sq-flex(1);
     width: 1%;
 }
+
+// 16:9 Ratio container for embedded video
+// This container is suitable for something like youtube videos
+.video-container
+{
+  position: relative;
+  padding-bottom: 56.25%; // Video area
+  padding-top: 30px; // 30px controls container
+  height: 0;
+  overflow: hidden;
+  margin-bottom: 1em;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
