Added known desired module output to the html file generator (things that don't get picked up in the bower deps resolution because of the dependent libraries missing bower config

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -96,6 +96,10 @@
     <!-- import:content module:bootstrap/html/js.html -->
     <% } %><% if (foundation) { %>
     <!-- import:content module:foundation/html/js.html -->
+    <% } %><% if (flexslider) { %>
+    <!-- import:js source/bower_components/flexslider/jquery.flexslider.js -->
+    <% } %><% if (typeahead) { %>
+    <!-- import:js source/bower_components/typeahead.js/dist/typeahead.js -->
     <% } %><!-- import:js module:**/js/plugin.js -->
     <!-- endbuild -->
 
