Shortened the header banner block on CSS files. Added time to date generator. TOC outputs more consistent names.

--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -1,17 +1,10 @@
 /**
- * {{name}}
- * Global CSS
- *
  * version: {{version}}
  * file:    {{file}}
  * author:  Squiz Australia
- * change log:
- *     {{date}} - First revision
- */
-
-/*
- * Table of Contents
+ * updated: {{date}}
  *
+ * Table of Contents:
  * 1. Reset
  * 2. Utilities
  * 3. General
