--- a/app/templates/source/styles/wide.scss
+++ b/app/templates/source/styles/wide.scss
@@ -1,17 +1,11 @@
 /**
- * {{name}}
- * Wide CSS
- *
  * version: {{version}}
  * file:    {{file}}
  * author:  Squiz Australia
- * change log:
- *     {{date}} - First revision
- */
-
-/*
- * Table of Contents
- * Modules
+ * updated: {{date}}
+ *
+ * Table of Contents:
+ * 1. Modules
 {{toc}}
  */
 
@@ -19,7 +13,7 @@
 
 /*
 --------------------
-Modules
+1. Modules
 --------------------
 */
 
