--- a/app/templates/source/styles/imports/placeholders.scss
+++ b/app/templates/source/styles/imports/placeholders.scss
@@ -41,12 +41,17 @@
 }
 
 %flex-box {
-    display: table;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+    .no-js &,
+    .no-flexbox & {
+        display: table;
+    }
+    .flexbox & {
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+    }
 }
 
 // Image replacement
