Removed foundation defaults, or commented out code. Foundation Sass has deprecation warnings with Sass 3.3.0 release candidate and no quick fixed on the horizon. Foundation can be manually added to the buildif required until Zurb officially supports next Sass version.

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -82,6 +82,8 @@
         <!-- import:js {{bowerdir}}/flexslider/jquery.flexslider.js -->
         <% } %><% if (typeahead) { %>
         <!-- import:js {{bowerdir}}/typeahead.js/dist/typeahead.js -->
+        <% } %><% if (dataTable) { %>
+        <!-- import:js {{bowerdir}}/datatables/media/js/jquery.dataTables.js -->
         <% } %><!-- import:js module:**/js/plugin.js -->
     <!-- endbuild -->
 
