--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -66,6 +66,16 @@ img {
     max-width: 100%;
 }
 
+// Reset fonts for relevant elements (taken from bootstrap)
+input,
+button,
+select,
+textarea {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
 // IE10 Metro responsive
 // Required for Windows 8 Metro split-screen snapping with IE10
 // Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
