--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>{{name}} - (version {{version}})</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="{{file_dest}}/favicon.ico">
