Bootstrap variables moved to boilerplate.scss so they are available to medium, wide and print Sass files

--- a/app/templates/source/styles/imports/boilerplate.scss
+++ b/app/templates/source/styles/imports/boilerplate.scss
@@ -3,3 +3,7 @@
 @import "mixins.scss";
 @import "placeholders.scss";
 @import "grid.scss";
+// Import bootstrap variables for use in all templates
+<% if (includeBootstrap) { %>
+@import "bootstrap_variables.scss";
+<% } %>
