Moved the favicon to the HTML root directory because most browsers will send a request for it at the root location anyway. http://developer.yahoo.com/performance/rules.html#favicon

--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>{{name}} - (version {{version}})</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="{{file_dest}}/favicon.ico">
+        <link rel="icon" href="favicon.ico">
         <link rel="apple-touch-icon-precomposed" href="{{file_dest}}/logo-144x144.png">
 {{_head_html}}
     </head>
