--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -5,6 +5,7 @@
         <title>{{name}} - (version {{version}})</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="favicon.ico">
+        <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
         <link rel="apple-touch-icon-precomposed" href="{{file_dest}}/logo-144x144.png">
 {{_head_html}}
     </head>
