Added html5 elems as default

--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -17,19 +17,19 @@
     <% if (ieConditionals) { %><!--<![endif]--><% } %>
     <div id="page-wrapper">
     <!--noindex-->
-        <div class="header" role="banner">
+        <header class="header" role="banner">
 
-        </div><!-- /.header -->
+        </header><!-- /.header -->
     <!--endnoindex-->
             <!-- start main-content -->
-            <div id="main" role="main">
+            <main class="main" role="main">
 
-            </div><!-- /#main -->
+            </main><!-- /#main -->
             <!-- end main-content -->
     <!--noindex-->
-        <div class="footer" role="contentinfo">
+        <footer class="footer" role="contentinfo">
 
-        </div><!-- /.footer -->
+        </footer><!-- /.footer -->
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
 {{_foot_html}}
