--- a/app/templates/source/html/parse.html
+++ b/app/templates/source/html/parse.html
@@ -40,23 +40,23 @@
         <!--noindex-->
         <MySource_AREA id_name="skip_links" design_area="nest_content" />
 
-        <div class="header clearfix" role="banner">
+        <header class="header clearfix" role="banner">
             <div class="banner">
                 <MySource_AREA id_name="header" design_area="nest_content" />
             </div>
-            <div id="main-navigation">
+            <nav id="main-navigation">
 
-            </div>
-        </div><!-- /.header -->
+            </nav>
+        </header><!-- /.header -->
 
-        <div id="main" role="main" class="column">
+        <main id="main" role="main" class="column">
             <MySource_AREA id_name="body" design_area="body" />
-        </div>
+        </main>
 
         <!--noindex-->
-         <div class="footer" role="contentinfo">
+         <footer class="footer" role="contentinfo">
             <MySource_AREA id_name="footer" design_area="nest_content" />
-        </div><!-- /.footer -->
+        </footer><!-- /.footer -->
 
     </div><!-- /#page-wrapper -->
     <MySource_AREA id_name="foot_scripts" design_area="nest_content" />
