--- a/app/templates/source/styles/imports/variables.scss
+++ b/app/templates/source/styles/imports/variables.scss
@@ -5,3 +5,7 @@ $base-font-colour: #222;
 
 // Selection highlighting
 $content-selection-highlight: #b3d4fc;
+
+// Spritesheet
+$spritesheet__src: "mysource_files/sprites";
+
