Spritesheet mixin description update

--- a/app/templates/source/styles/imports/mixins.scss
+++ b/app/templates/source/styles/imports/mixins.scss
@@ -101,7 +101,8 @@
 /*
 
   Spritesheet mixin (adewezlopez@squiz.net)
-  Loops through your spritesheet and creates classe for you to easily add icons to your elements, or you can extend them for use with pseudo elements
+  Loops through your spritesheet and creates classes for you to easily add icons to your elements, or you can extend them for use with pseudo elements.
+
 
   1. Set your spritesheet in a grid of your choosing and enter the width and height of each cell in the variables below.
   2. Enter the column length (horizontal count of cells)
